Version 1.14 - 2017-11-09
Version 1.12 - 2017-04-28

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06

Version 1.6 - 2015-12-23

Version 1.4 - 2015-05-29
* FEA#0000 Add extra data on agent to be used with the rule engine
* FEA#0000 Allow to configure the commission formula with the rule engine

Version 1.3 - 2015-01-22
* FEA#0000 Module creation