@@ -1,3 +1,5 @@
+* BUG#7714 Use the commission start date instead of the invoice line start date as date when calling the rule engine
+
 Version 1.14 - 2017-11-09
 Version 1.12 - 2017-04-28
 
